[package]
name = "knox-id-store"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros", "query"] }
chrono = { version = "0.4.41", features = ["serde"] }
config = "0.15.11"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
log = "0.4.27"
moka = { version = "0.12.10", features = ["future"] }
rand = { version = "0.9.1"}
redis = { version = "0.30.0", features = ["connection-manager", "tokio-comp"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["chrono", "json", "postgres", "runtime-tokio", "uuid"] }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
url = "2.5.4"
argon2 = "0.5.3"
base64 = "0.22.1"
rsa = { version = "0.9.8", features = ["serde"] }
async-trait = "0.1.88"
tonic = "0.13.1"
prost = "0.13.5"
prost-types = "0.13.5"
tonic-reflection = "0.13.1"

[build-dependencies]
tonic-build = "0.13.1"
